[NOID] fix compile error and code formatting